# jobforge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  portals.example.yml  pyproject.toml  requirements.txt
config/: profile.example.yml
docs/: SETUP.md
jobforge/: __init__.py  config.py  cv_generator.py  dashboard.py  evaluator.py  gemini.py  main.py  pdf_gen.py  scraper.py  tracker.py
templates/: cv.html
tests/: __init__.py  test_config.py  test_gemini.py  test_scraper.py  test_tracker.py
