[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jobforge"
version = "1.0.0"
description = "AI-powered job search automation — built by Srikar Allampally"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Srikar Allampally", email = "allampallysrikar@github.com" }]
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "playwright>=1.40.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
jobforge = "jobforge.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line-too-long handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
